Adicioanado validação de filtro de pesquisa e paginação na lista de clientes.

--- a/Cliente/templates/website/cria.html
+++ b/Cliente/templates/website/cria.html
@@ -61,7 +61,7 @@
             <hr>
             <div class="text-right">
               <a href="{% url 'website:lista_clientes' %}" class="btn btn-outline-primary">Voltar</a>
-              <button class="btn btn-primary">Enviar</button>
+              <button class="btn btn-primary">Gravar</button>
             </div>
           </form>
         </div>
