--- a/Cliente/templates/website/_layouts/base.html
+++ b/Cliente/templates/website/_layouts/base.html
@@ -7,6 +7,11 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.quicksearch/2.3.1/jquery.quicksearch.js"></script>
+
+
         <!-- Title -->
         <title>{% block title %}Sistema de Gerenciamento de Clientes{% endblock %}</title>
 
@@ -60,5 +65,6 @@
         {% block scripts %}{% endblock %}
 
         <script src="{% static 'website/js/scripts.js' %}"></script>
+
     </body>
 </html>
