--- a/Cliente/templates/website/atualiza.html
+++ b/Cliente/templates/website/atualiza.html
@@ -2,7 +2,7 @@
 
 {% load widget_tweaks %}
 
-{% block title %}Atualização de Funcionário{% endblock %}
+{% block title %}Atualização de Cliente{% endblock %}
 
 {% block conteudo %}
 <div class="container mt-5">
@@ -10,54 +10,54 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Atualizar Dados de Funcionário</h5>
+          <h5 class="card-title">Atualizar Dados de Cliente</h5>
           <form method="post">
             <!-- Não se esqueça dessa tag -->
             {% csrf_token %}
 
-            <!-- Nome -->
+            <!-- Razão Social -->
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text">Nome</span>
+                <span class="input-group-text">Razão Social</span>
               </div>
-              {% render_field form.nome class+="form-control" %}
+              {% render_field form.razao_social class+="form-control" %}
             </div>
 
-            <!-- Sobrenome -->
+            <!-- Nome Fantasia -->
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text">Sobrenome</span>
+                <span class="input-group-text">Nome Fantasia</span>
               </div>
-              {% render_field form.sobrenome class+="form-control" %}
+              {% render_field form.nome_fantasia class+="form-control" %}
             </div>
 
-            <!-- CPF -->
+            <!-- CNPJ -->
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text">CPF</span>
+                <span class="input-group-text">CNPJ</span>
               </div>
-              {% render_field form.cpf class+="form-control" %}
+              {% render_field form.cnpj class+="form-control" %}
             </div>
 
-            <!-- Tempo de Serviço -->
+            <!-- Telefone -->
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text">Tempo de Serviço</span>
+                <span class="input-group-text">Telefone</span>
               </div>
-              {% render_field form.tempo_de_servico class+="form-control" %}
+              {% render_field form.telefone class+="form-control" %}
             </div>
 
-            <!-- Remuneração -->
+            <!-- Email -->
             <div class="input-group mb-3">
               <div class="input-group-prepend">
-                <span class="input-group-text">Remuneração</span>
+                <span class="input-group-text">E-mail</span>
               </div>
-              {% render_field form.remuneracao class+="form-control" %}
+              {% render_field form.email class+="form-control" %}
             </div>
             <hr />
             <div class="text-right">
-              <a href="{% url 'website:lista_funcionarios' %}" class="btn btn-outline-primary">Voltar</a>
-              <button class="btn btn-primary">Enviar</button>
+              <a href="{% url 'website:lista_clientes' %}" class="btn btn-outline-primary">Voltar</a>
+              <button class="btn btn-primary">Atualizar</button>
             </div>
           </form>
         </div>
