--- a/Cliente/templates/website/exclui.html
+++ b/Cliente/templates/website/exclui.html
@@ -9,10 +9,10 @@
   <div class="container mt-5">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Exclusão de Funcionário</h5>
+        <h5 class="card-title">Exclusão de Clientes</h5>
 
         <p class="card-text">
-          Você tem certeza que quer excluir o funcionário <b>{{ funcionario.nome }}</b>?
+          Você tem certeza que quer excluir o cliente <b>{{ cliente.razao_social }}</b>?
         </p>
 
         <form method="post">
@@ -20,7 +20,7 @@
 
           <hr />
           <div class="text-right">
-            <a href="{% url 'website:lista_funcionarios' %}" class="btn btn-outline-danger">
+            <a href="{% url 'website:lista_clientes' %}" class="btn btn-outline-danger">
               Cancelar
             </a>
             <button class="btn btn-danger">Excluir</button>
