--- a/Cliente/templates/website/lista.html
+++ b/Cliente/templates/website/lista.html
@@ -13,31 +13,36 @@
           <h5 class="card-title">Lista de Clientes</h5>
 
           {% if clientes|length > 0 %}
-            <p class="card-text">
-              Aqui está a lista de <code>Clientes</code> cadastrados.
-            </p>
 
-            <table class="table">
+            <input class="form-control form-control-gray w-100" type="search" name="search" id="txt_consulta" ng-model="termo" autofocus placeholder="Buscar Clientes..." aria-label="Search">
+
+            <br>
+
+            <table id="tabela" class="table table-striped table-bordered table-sm">
               <thead class="thead-dark">
-              <tr>
-                <th scope="col"></th>
-                <th scope="col">Razão Social</th>
-                <th scope="col">Nome Fantasia</th>
-                <th scope="col">CNPJ</th>
-                <th scope="col">Telefone</th>
-                <th scope="col">Email</th>
+
+              <tr class="bgTR">
+
+                <th class="text-center" scope="col"></th>
+                <th class="text-center" scope="col">Razão Social</th>
+                <th class="text-center" scope="col">Nome Fantasia</th>
+                <th class="text-center" scope="col">CNPJ</th>
+                <th class="text-center" scope="col">Telefone</th>
+                <th class="text-center" scope="col">E-mail</th>
+
                 <th scope="col" class="text-center">Ações</th>
               </tr>
               </thead>
-              <tbody>
+              <tbody id="myTable">
               {% for cliente in clientes %}
-                <tr>
+                <tr ng-repeat="cliente in clientes | filter:termo | orderBy:ordem:invertido">
                   <th scope="row">{{ cliente.razao_social|primeira_letra }}</th>
-                  <td>{{ cliente.razao_social }}</td>
-                  <td>{{ cliente.nome_fantasia }}</td>
-                  <td>{{ cliente.cnpj }}</td>
-                  <td>{{ cliente.telefone }}</td>
-                  <td>{{ cliente.email }}</td>
+                  <td class="text-center">{{ cliente.razao_social }}</td>
+                  <td class="text-center">{{ cliente.nome_fantasia }}</td>
+                  <td class="text-center">{{ cliente.cnpj }}</td>
+                  <td class="text-center">{{ cliente.telefone }}</td>
+                  <td class="text-center">{{ cliente.email }}</td>
+
                   <td class="text-center">
                     <a href="{% url 'website:atualiza_cliente' pk=cliente.id %}"
                        class="btn btn-primary">
@@ -58,6 +63,41 @@
           </div>
         {% endif %}
           <hr />
+
+          {% if is_paginated %}
+
+
+    <nav aria-label="Page navigation">   <ul class="pagination">
+    {% if page_obj.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page=1" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">begin</span>
+      </a>
+    </li>   {% endif %}
+
+    {% for n in page_obj.paginator.page_range %}
+      {% if page_obj.number == n %}
+        <li class="page-item active">
+          <span class="page-link">{{ n }}<span class="sr-only">(current)</span></span>
+        </li>
+      {% elif n > page_obj.number|add:'-3' and n < page_obj.number|add:'3' %}
+        <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
+      {% endif %}
+    {% endfor %}
+
+    {% if page_obj.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">end</span>
+        </a>
+      </li>
+      {% endif %}   </ul> </nav>
+
+
+{% endif %}
+
           <div class="text-right">
             <a href="{% url 'website:cadastra_cliente' %}" class="btn btn-primary">
               Cadastrar Cliente
@@ -68,4 +108,9 @@
     </div>
   </div>
 </div>
+
+<script>
+  $('input#txt_consulta').quicksearch('table#tabela tbody tr');
+</script>
+
 {% endblock %}
